// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<DividerLine /> > should match the snapshot 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <div
    class="reset_resetVariants__4z7xt3d reset_resetVariants_as_div__4z7xt3e reset_block__4z7xt34 sprinkles_marginTop_3_mobile__onxwju10g sprinkles_marginBottom_3_mobile__onxwjuww sprinkles_backgroundColor_shine__onxwju33 DividerLine_size_horizontal_2__k1y61r1"
  />
</div>
`;

exports[`<DividerLine /> > should match the snapshot as vertical 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <div
    class="reset_resetVariants__4z7xt3d reset_resetVariants_as_div__4z7xt3e reset_block__4z7xt34 sprinkles_marginLeft_3_mobile__onxwjuy0 sprinkles_marginRight_3_mobile__onxwjuz8 sprinkles_backgroundColor_shine__onxwju33 DividerLine_size_vertical_2__k1y61r4"
  />
</div>
`;
